[GALLERY] Fix layout issue #master

--- a/src/app/features/gallery/components/video-detail/video-detail.component.scss
+++ b/src/app/features/gallery/components/video-detail/video-detail.component.scss
@@ -1,3 +1,7 @@
+ngx-spinner {
+  display: contents;
+}
+
 .details {
   height: 100%;
   display: grid;
